# abtech_icmtem_2024

./: .replit  LICENSE  README.md  app.py  pyproject.toml
static/: IJATEM PAPER TEMPLATE NEW.docx  IJATEM PAPER TEMPLATE.docx  style.css
templates/: ababtech.html  abicmtem.html  abstella.html  awards.html  callforpaper.html  chiefguests.html  committee.html  contactus.html  index.html  intcommittee.html  journals.html  keynote.html  nacommittee.html  navbar.html  nta.html  orgcommittee.html  papersub.html  presentationguide.html  registration.html  sccommittee.html  venue.html  wca.html
